@@ -3,8 +3,8 @@ package com.pet_care.medicine_service.service;
 import com.pet_care.medicine_service.client.UploadImageClient;
 import com.pet_care.medicine_service.dto.request.MedicineCreateRequest;
 import com.pet_care.medicine_service.dto.request.MedicineUpdateRequest;
-import com.pet_care.medicine_service.dto.response.MedicinePageResponse;
 import com.pet_care.medicine_service.dto.response.MedicineResponse;
+import com.pet_care.medicine_service.dto.response.PageableResponse;
 import com.pet_care.medicine_service.enums.MedicineStatus;
 import com.pet_care.medicine_service.exception.APIException;
 import com.pet_care.medicine_service.exception.ErrorCode;
@@ -21,7 +21,6 @@ import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
-import org.jetbrains.annotations.NotNull;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -39,32 +38,31 @@ import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class MedicineService {
-     MedicineRepository medicineRepository;
+    MedicineRepository medicineRepository;
 
-     LocationRepository locationRepository;
+    LocationRepository locationRepository;
 
-     CalculationUnitRepository calculationUnitRepository;
+    CalculationUnitRepository calculationUnitRepository;
 
-     ManufactureRepository manufactureRepository;
+    ManufactureRepository manufactureRepository;
 
-     MedicineMapper medicineMapper;
+    MedicineMapper medicineMapper;
 
-     UploadImageClient uploadImageClient;
+    UploadImageClient uploadImageClient;
 
     /**
      * @return
      */
-    
+
     @Transactional(readOnly = true)
-    public List<MedicineResponse> getAllMedicine(int pageNumber, int pageSize, String searchTerm, Date manufacturingDate, Date expiryDate, MedicineStatus status, Double minPrice, Double maxPrice, String sortBy,
-                                               String sortOrder) {
+    public PageableResponse<MedicineResponse> filterMedicines(int pageNumber, int pageSize, String searchTerm, Date manufacturingDate, Date expiryDate, MedicineStatus status, Double minPrice, Double maxPrice, String sortBy,
+                                                              String sortOrder) {
         Sort sort = Sort.by(Sort.Direction.fromString(sortOrder), sortBy);
         Pageable pageable = PageRequest.of(pageNumber, pageSize, sort);
         Page<Medicine> medicinePage = medicineRepository.findByFilters(
@@ -73,19 +71,26 @@ public class MedicineService {
 
         List<MedicineResponse> medicineList = medicinePage.getContent().stream()
                 .map(medicineMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+
+        PageableResponse<MedicineResponse> pageableResponse = PageableResponse.<MedicineResponse>builder()
+                .content(medicineList)
+                .totalPages(medicinePage.getTotalPages())
+                .pageNumber(medicinePage.getNumber())
+                .pageSize(medicinePage.getSize())
+                .build();
 
         log.info("Find all medicines with filters");
-        return medicineRepository.findAll().stream().map(medicineMapper::toDto).collect(Collectors.toList());
+        return pageableResponse;
     }
 
     /**
      * @param id
      * @return
      */
-    
+
     @Transactional(readOnly = true)
-    public Medicine getMedicineById( Long id) {
+    public Medicine getMedicineById(Long id) {
         Medicine medicine = medicineRepository.findById(id)
                 .orElseThrow(() -> new APIException(ErrorCode.MEDICINE_NOT_FOUND));
         log.info("Find medicine by id: {}", medicine.getId());
@@ -96,9 +101,9 @@ public class MedicineService {
      * @param medicineIds
      * @return
      */
-    
+
     @Transactional(readOnly = true)
-    public List<Medicine> getMedicineInIds( Set<Long> medicineIds) {
+    public List<Medicine> getMedicineInIds(Set<Long> medicineIds) {
         List<Medicine> medicineList = medicineRepository.findAllById(medicineIds);
         log.info("Find medicine by ids: {}", medicineIds);
         return medicineList;
@@ -108,9 +113,9 @@ public class MedicineService {
      * @param medicineCreateRequest
      * @return
      */
-    
+
     @Transactional
-    public Medicine createMedicine( MedicineCreateRequest medicineCreateRequest, MultipartFile imageFile) throws IOException {
+    public Medicine createMedicine(MedicineCreateRequest medicineCreateRequest, MultipartFile imageFile) throws IOException {
         Medicine newMedicine = medicineMapper.toEntity(medicineCreateRequest);
 
         checkAndUploadImageMedicine(imageFile, newMedicine);
@@ -133,9 +138,9 @@ public class MedicineService {
      * @param medicineUpdateRequest
      * @return
      */
-    
+
     @Transactional
-    public Medicine updateMedicine( Long medicineId,  MedicineUpdateRequest medicineUpdateRequest, MultipartFile imageFile) throws IOException {
+    public Medicine updateMedicine(Long medicineId, MedicineUpdateRequest medicineUpdateRequest, MultipartFile imageFile) throws IOException {
         Medicine existingMedicine = medicineRepository.findById(medicineId)
                 .orElseThrow(() -> new APIException(ErrorCode.MEDICINE_NOT_FOUND));
 
@@ -162,7 +167,7 @@ public class MedicineService {
      * @param medicineId
      */
     @Transactional
-    public void deleteMedicine( Long medicineId) {
+    public void deleteMedicine(Long medicineId) {
         medicineRepository.deleteById(medicineId);
         log.info("Delete medicine successful");
     }
